--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <div class="content">
                 <h2><strong> Contate-nos!</strong></h2>
                 
-                <form align-center autocomplete="on" onsubmit="alert('Mensagem enviada com sucesso')">
+                <form autocomplete="on" onsubmit="alert('Mensagem enviada com sucesso')">
                     Nome: <input type= "text" name="name"/> <br>
                     E-mail:<input type= "email" name="email"/> <br> 
                     Assunto: <input type= "text" name="Assunto"/> <br>
